--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "script/build.bash",
     "clean": "script/clean.bash",
+    "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "start": "script/start.bash",
     "syntax": "script/syntax.bash",
     "test": "script/test.bash"
