fixed import error in spec file

--- a/servers/execution/runner/jest.config.json
+++ b/servers/execution/runner/jest.config.json
@@ -1,5 +1,5 @@
 {
-  "preset": "ts-jest",
+  "preset": "ts-jest/presets/default-esm",
   "testEnvironment": "node",
   "transform": {
     "(src|test)/^.+\\.(t|j)sx?$": [
