--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -14,14 +14,19 @@ theme:
     - navigation.tracking
     - navigation.footer
 
-plugins:
-  - offline
-
 nav:
   - Home: index.md
   - Admin:
-      - website: admin/client/CLIENT.md
-      - library microservice: admin/servers/lib/LIB-MS.md
+      - Host Install:
+        - Trial: admin/trial.md
+        - Production: admin/host.md
+      - Vagrant:
+        - Base Box: admin/vagrant/base-box.md
+        - Single Machine: admin/vagrant/single-machine.md
+        - Two Machines: admin/vagrant/two-machines.md
+      - Separate Packages:
+        - website: admin/client/CLIENT.md
+        - library microservice: admin/servers/lib/LIB-MS.md
   - User:
       - Features: user/features.md
       - Website: user/website/index.md
@@ -64,3 +69,7 @@ markdown_extensions:
       alternate_style: true   
   - mdx_math:
       enable_dollar_delimiter: True
+
+plugins:
+  - open-in-new-tab
+  - search
