Fix workflow errors and improves markdown linting
  - Fixes mistakes in github action files
  - Adds markdown lint config file

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,8 +23,8 @@ jobs:
         uses: Tiryoh/actions-mkdocs@v0
         with:
           mkdocs_version: 'latest'
-          requirements: 'docs/requirements.txt'
-          configfile: 'mkdocs.yml'
+          requirements: 'docs/requirements-github.txt'
+          configfile: 'mkdocs-github.yml'
 
 
       - name: show contents of compiled docs
