--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -25,9 +25,15 @@
   ],
   "devDependencies": {
     "@jest/globals": "^29.6.2",
+    "@nestjs/cli": "^10.1.17",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.2.5",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.84",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
@@ -38,9 +44,14 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2"
   },
   "dependencies": {
     "@nestjs/common": "^10.2.4",
