Updates server routes and service functionality
  - Adds lifecycleManager and its dependencies
  - Fixes the yarn publish step. Now the package
    can be published successfully

--- a/servers/execution/runner/jest.config.json
+++ b/servers/execution/runner/jest.config.json
@@ -16,7 +16,8 @@
     "node_modules",
     "./dist",
     "../src/app.module.ts",
-    "../src/main.ts"
+    "../src/main.ts",
+    "../src/runner.ts"
   ],
   "extensionsToTreatAsEsm": [".ts"],
   "moduleFileExtensions": [
