Completes integration tests
  - Completes integration tests for the codebase
  - Makes the execaCMDRunner catch the invalid commands
  - Removes get-stream dependency from execaCMDRunner
  - Uploads codecoverage to codecov
  - Adds new yarn command to watch the tests
  - Adds emojis to README

--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -46,3 +46,9 @@ jobs:
           cd servers/execution/runner
           yarn install
           yarn test
+
+      - name: Upload test coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: servers/execution/runner/coverage/clover.xml
+          flags: dt-runner
