Adds API Specification for DT Runner  and updates shell scripts
  - Add OpenAPI specification for DT Runner
  - Updates git-hooks to check against runner as well
  - Adds more yarn test commands to runner

--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -15,7 +15,8 @@
     "start": "script/start.bash",
     "syntax": "script/syntax.bash",
     "test": "script/test.bash",
-    "test:watchAll": "script/test.bash  --watchAll"
+    "test:nocov": "script/test.bash nocoverage",
+    "test:watchAll": "script/test.bash watchAll"
   },
   "bin": {
     "runner": "./dist/src/runner.js"
