Update launch script for the package

--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -19,7 +19,7 @@
     "test:watchAll": "script/test.bash watchAll"
   },
   "bin": {
-    "runner": "./dist/src/runner.js"
+    "runner": "./dist/src/main.js"
   },
   "files": [
     "dist/",
