--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -17,28 +17,29 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.4",
-    "@nestjs/apollo": "^10.2.0",
-    "@nestjs/common": "^9.3.9",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.3.9",
-    "@nestjs/graphql": "^10.2.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "apollo-server-express": "^3.12.1",
+    "@apollo/server": "^4.9.3",
+    "@nestjs/apollo": "^12.0.9",
+    "@nestjs/common": "^10.2.6",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.6",
+    "@nestjs/graphql": "^12.0.9",
+    "@nestjs/platform-express": "^10.2.6",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.4.0",
     "express": "^4.17.1",
     "graphql": "^16.8.1",
+    "graphql-scalars": "^1.22.2",
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "type-graphql": "^2.0.0-beta.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^10.1.18",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.2.6",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.5",
@@ -56,5 +57,8 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.2.2"
+  },
+  "peerDependencies": {
+    "graphql-scalars": "^1.22.2"
   }
 }
