--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,10 @@ nav:
       - Separate Packages:
         - website: admin/client/CLIENT.md
         - library microservice: admin/servers/lib/LIB-MS.md
+  - Developer:
+      - Testing:
+        - Introduction: developer/testing/intro.md
+      - Index: developer/index.md
   - User:
       - Features: user/features.md
       - Website: user/website/index.md
