--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,10 @@ nav:
         - website: admin/client/CLIENT.md
         - library microservice: admin/servers/lib/LIB-MS.md
   - Developer:
+      - System:
+        - Architecture: developer/system/architecture.md
+        - Library Microservice: developer/system/lib-ms.md
+        - Client: docs/developer/system/client.md
       - Testing:
         - Introduction: developer/testing/intro.md
       - Index: developer/index.md
