--- a/.mdlrc
+++ b/.mdlrc
@@ -1,5 +1,4 @@
 git_recurse true
 all
-rule 'MD013', :ignore_code_blocks => true
-rule 'MD013', :tables => false
+rule 'MD013',
 rule 'MD046', :indented
