Undo update .mdlrc

--- a/.mdlrc
+++ b/.mdlrc
@@ -1,4 +1,5 @@
 git_recurse true
 all
-rule 'MD013',
+rule 'MD013', :ignore_code_blocks => true
+rule 'MD013', :tables => false
 rule 'MD046', :indented
