--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -27,14 +27,7 @@ nav:
       - Separate Packages:
         - website: admin/client/CLIENT.md
         - library microservice: admin/servers/lib/LIB-MS.md
-  - Developer:
-      - System:
-        - Architecture: developer/system/architecture.md
-        - Library Microservice: developer/system/lib-ms.md
-        - Client: developer/system/client.md
-      - Testing:
-        - Introduction: developer/testing/intro.md
-      - Index: developer/index.md
+      - Services: admin/services.md
   - User:
       - Features: user/features.md
       - Website: user/website/index.md
