Updates documentation (#114 and #117)
  - Adds developer documentation
  - Updates user documentation
  - Uses mermaid to integrate UML diagrams
     into the documentation.
  - Uses madge npm package to generate
    dependency graphs for source code.
  - Corrects the markdown linter configuration to
     catch the warnings in markdown files.

--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -27,7 +27,9 @@ nav:
       - Separate Packages:
         - website: admin/client/CLIENT.md
         - library microservice: admin/servers/lib/LIB-MS.md
+      - Services: admin/services.md
   - User:
+      - Motivation: user/motivation.md
       - Features: user/features.md
       - Website: user/website/index.md
       - Library: 
@@ -38,6 +40,15 @@ nav:
           - Lifecycle: user/digital-twins/lifecycle.md
       - Examples: https://github.com/INTO-CPS-Association/DTaaS-examples
   - FAQ: FAQ.md
+  - Developer: 
+      - Overview: developer/index.md 
+      - System:
+        - Architecture: developer/system/architecture.md
+        - Current Status: developer/system/current-status.md
+      - Components:
+        - Client: developer/client/client.md
+        - Library Microservice: developer/servers/lib/lib-ms.md
+      - Testing: developer/testing/intro.md
   - Bugs: bugs.md
   - Thanks: thanks.md
   - License: LICENSE.md
@@ -63,13 +74,22 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets      
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.details
   - admonition
   - pymdownx.tabbed:
       alternate_style: true   
   - mdx_math:
       enable_dollar_delimiter: True
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
 
 plugins:
   - open-in-new-tab
