--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -17,6 +17,7 @@ theme:
 nav:
   - Home: index.md
   - Admin:
+      - Authentication: admin/client/auth.md
       - Host Install:
         - Trial: admin/trial.md
         - Production: admin/host.md
