--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -24,41 +24,41 @@
     "@nestjs/core": "^10.2.6",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.2.6",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^27.4.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "graphql": "^16.8.1",
-    "graphql-scalars": "^1.22.2",
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "type-graphql": "^2.0.0-beta.2"
+    "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.18",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.6",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.6.5",
-    "@types/supertest": "^2.0.11",
+    "@types/node": "20.7.2",
+    "@types/supertest": "^2.0.13",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^8.49.0",
+    "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.4.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "29.7.0",
     "prettier": "^3.0.3",
-    "supertest": "^6.1.3",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "graphql-scalars": "^1.22.2"
-  }
+  },
+  "packageManager": "yarn@3.6.3"
 }
