--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -6,7 +6,6 @@
   "contributors": [
     "Prasad Talasila"
   ],
-  "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
   "scripts": {
     "build": "script/build.bash",
@@ -58,6 +57,6 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "graphql-scalars": "^1.22.2"
+    "graphql-scalars": "*"
   }
 }
