--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -17,45 +17,48 @@
     "graph": "script/graph.bash"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.10",
-    "@nestjs/apollo": "^10.2.0",
-    "@nestjs/common": "^9.3.9",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.3.9",
-    "@nestjs/graphql": "^10.2.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "apollo-server-express": "^3.12.0",
-    "axios": "^1.4.0",
-    "dotenv": "^16.0.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "express": "^4.17.1",
-    "graphql": "^16.6.0",
+    "@apollo/client": "^3.8.4",
+    "@apollo/server": "^4.9.3",
+    "@nestjs/apollo": "^12.0.9",
+    "@nestjs/common": "^10.2.6",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.6",
+    "@nestjs/graphql": "^12.0.9",
+    "@nestjs/platform-express": "^10.2.6",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.1.0",
-    "type-graphql": "^2.0.0-beta.2"
+    "rxjs": "^7.8.1",
+    "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^29.5.3",
-    "@types/node": "18.11.18",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.35.0",
+    "@nestjs/cli": "^10.1.18",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.2.6",
+    "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
+    "@types/node": "20.7.2",
+    "@types/supertest": "^2.0.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.3.1",
-    "prettier": "^3.0.0",
-    "supertest": "^6.1.3",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.4.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "29.7.0",
+    "prettier": "^3.0.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.2.2"
+  },
+  "peerDependencies": {
+    "graphql-scalars": "^1.22.2"
   }
 }
