--- a/deploy/vagrant/make_boxes/dtaas/Vagrantfile
+++ b/deploy/vagrant/make_boxes/dtaas/Vagrantfile
@@ -12,6 +12,7 @@ Vagrant.configure("2") do |config|
       vb.cpus = 8
     end
   
-    config.vm.provision "shell", path: "provision.sh"
+    config.vm.provision "shell", path: "user.sh"
+    #config.vm.provision "shell", path: "developer.sh"
 end
 
