--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "mock-fs": "^5.2.0",
+    "nest-commander": "^3.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "type-graphql": "^2.0.0-beta.3"
