--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -22,16 +22,20 @@
   "dependencies": {
     "@apollo/client": "^3.8.4",
     "@apollo/server": "^4.9.3",
+    "@fig/complete-commander": "2.0.1",
     "@nestjs/apollo": "^12.0.9",
     "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.6",
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.2.6",
+    "@types/inquirer": "^8.1.3",
     "axios": "^1.5.1",
+    "commander": "8.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-scalars": "^1.22.2",
     "mock-fs": "^5.2.0",
     "nest-commander": "^3.12.0",
     "reflect-metadata": "^0.1.13",
