--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
       - Examples:
           - Overview: user/examples/index.md
           - Mass Spring Damper: user/examples/mass-spring-damper/README.md
+          - Water Tank Fault Injection: user/examples/water_tank_FI/README.md
           - Codebase: https://github.com/INTO-CPS-Association/DTaaS-examples
   - FAQ: FAQ.md
   - Developer: 
