--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dtaas/libms",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
@@ -17,6 +17,9 @@
     "graph": "script/graph.bash"
   },
   "bin": "./dist/src/main.js",
+  "files": [
+    "./src/schema.gql"
+  ],
   "dependencies": {
     "@apollo/client": "^3.8.4",
     "@apollo/server": "^4.9.3",
