--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lib",
+  "name": "@dtaas/libms",
   "version": "0.2.0",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
@@ -16,6 +16,7 @@
     "test": "script/test.bash",
     "graph": "script/graph.bash"
   },
+  "bin": "./dist/src/main.js",
   "dependencies": {
     "@apollo/client": "^3.8.4",
     "@apollo/server": "^4.9.3",
@@ -26,6 +27,7 @@
     "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-express": "^10.2.6",
     "axios": "^1.5.1",
+    "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
@@ -50,6 +52,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.4.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "graphql-scalars": "^1.22.2",
     "jest": "29.7.0",
     "prettier": "^3.0.3",
     "supertest": "^6.3.3",
@@ -57,8 +60,5 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "^5.2.2"
-  },
-  "peerDependencies": {
-    "graphql-scalars": "^1.22.2"
   }
 }
