--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@into-cps-association/libms",
+  "name": "@dtaas/libms",
   "version": "0.2.0",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
@@ -8,6 +8,9 @@
   ],
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
+  "publishConfig": {
+    "@lindot11:registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "build": "script/build.bash",
     "clean": "script/clean.bash",
