--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dtaas/libms",
-  "version": "0.2.0",
+  "name": "@lindot11/libms",
+  "version": "0.2.1",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
@@ -9,7 +9,7 @@
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
   "publishConfig": {
-    "@into-cps-association:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
     "build": "script/build.bash",
