--- a/deploy/config/services/mqtt/config/mosquitto.conf
+++ b/deploy/config/services/mqtt/config/mosquitto.conf
@@ -3,5 +3,5 @@ persistence_location /var/lib/mosquitto/
 
 log_dest file /mosquitto/log/mosquitto.log
 
-listener 1883
+listener 1883 0.0.0.0
 password_file /mosquitto/config/password
