changed registry and specified owner to test publish public

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -76,14 +76,13 @@ jobs:
           node-version: 18
           cache: "yarn"
           cache-dependency-path: "**/yarn.lock"
-          registry-url: https://npm.pkg.github.com/
 
       - name: Publish package
         run: |
           cd servers/lib
           yarn install
           yarn build
-          yarn publish
+          yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
