--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lindot11/libms",
+  "name": "@dtaas/libms",
   "version": "0.2.6",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
@@ -9,7 +9,7 @@
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com/INTO-CPS-Association"
   },
   "scripts": {
     "build": "script/build.bash",
