--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -65,6 +65,9 @@ jobs:
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     needs: test-lib-ms
+    permissions:
+      packages: write
+      contents: read
 
     steps:
       - name: Checkout
@@ -76,13 +79,14 @@ jobs:
           node-version: 18
           cache: "yarn"
           cache-dependency-path: "**/yarn.lock"
+          registry-url: https://npm.pkg.github.com/
 
       - name: Publish package
         run: |
           cd servers/lib
           yarn install
           yarn build
-          yarn publish --access public
+          yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.REPO_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
