--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -65,6 +65,9 @@ jobs:
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     needs: test-lib-ms
+    permissions:
+      packages: write
+      contents: read
 
     steps:
       - name: Checkout
