--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -62,6 +62,7 @@ jobs:
           flags: lib-microservice-tests
 
   publish-package:
+    if: github.ref == 'refs/heads/feature/distributed-demo'
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     needs: test-lib-ms
@@ -87,7 +88,10 @@ jobs:
           cd servers/lib
           yarn install
           yarn build
-          yarn publish --access public
+          yarn publish --access restricted
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+
+
+
        
