expand the scope of branches publishing packages

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -62,7 +62,9 @@ jobs:
           flags: lib-microservice-tests
 
   publish-package:
-    if: github.ref == 'refs/heads/feature/distributed-demo'
+    if: | 
+      github.ref == 'refs/heads/feature/distributed-demo' ||
+      'refs/head/release-v*'
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     needs: test-lib-ms
