--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -64,7 +64,7 @@ jobs:
   publish-package:
     if: | 
       github.ref == 'refs/heads/feature/distributed-demo' ||
-      'refs/head/release-v*'
+      'refs/heads/release-v*'
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     needs: test-lib-ms
