--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -63,8 +63,7 @@ jobs:
 
   publish-package:
     if: | 
-      github.ref == 'refs/heads/feature/distributed-demo' ||
-      'refs/heads/release-v*'
+      github.ref == 'refs/heads/feature/distributed-demo'
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     needs: test-lib-ms
