added push condition to publish package action

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -62,9 +62,12 @@ jobs:
           flags: lib-microservice-tests
 
   publish-package:
+
     if: | 
-      github.ref == 'refs/heads/feature/distributed-demo' ||
-      'refs/heads/release-v*'
+      github.event_name == 'push' &&
+      (github.ref == 'refs/heads/feature/distributed-demo' ||
+      'refs/heads/release-v*')
+
     name: Publish to GitHub Packages
     runs-on: ubuntu-latest
     needs: test-lib-ms
