Updates docs, install scripts and config
  - Updates documentation links to release v0.3 branch.
  - Fixes mistakes in install script and docs.
  - Updates gateway config to have libms as well.

--- a/deploy/config/gateway/fileConfig.yml
+++ b/deploy/config/gateway/fileConfig.yml
@@ -24,11 +24,11 @@ http:
         - basic-auth
       service: user2
 
-    vis:
+    libms:
       entryPoints:
         - http
-      rule: 'Host(`foo.com`) && PathPrefix(`/vis`)'
-      service: grafana
+      rule: 'Host(`foo.com`) && PathPrefix(`/lib`)'
+      service: libms
 
 
   # Middleware: Basic authentication
@@ -55,8 +55,7 @@ http:
         servers:
           - url: "http://localhost:8091"
 
-    grafana:
+    libms:
       loadBalancer:
         servers:
-          - url: "http://localhost:3000"
-
+          - url: "http://localhost:4001"
