--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -4,7 +4,10 @@
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
-    "Prasad Talasila"
+    "Prasad Talasila",
+    "Mads Kelberg",
+    "Linda Nguyen"
+
   ],
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
