Publish libms to GitHub package registry (#239)
  - Adds github actions to publish library microservice to github packages
  - Updates READMEs for library microservice

---------
Co-authored-by: Mads Kelberg <madskelberg@tutanota.com>
Co-authored-by: prasadtalasila <prasad.talasila@gmail.com>
Co-authored-by: lindot09 <149807780+lindot09@users.noreply.github.com>

--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@dtaas/libms",
-  "version": "0.2.0",
+  "name": "@into-cps-association/libms",
+  "version": "0.3.1",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
-    "Prasad Talasila"
+    "Prasad Talasila",
+    "Mads Kelberg",
+    "Linda Nguyen"
   ],
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
