--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -60,3 +60,42 @@ jobs:
         with:
           files: servers/lib/coverage/clover.xml
           flags: lib-microservice-tests
+
+  publish-package:
+
+    if: | 
+      github.event_name == 'push' &&
+      (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
+
+    name: Publish to GitHub Packages
+    runs-on: ubuntu-latest
+    needs: test-lib-ms
+    permissions:
+      packages: write
+      contents: read
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: "yarn"
+          cache-dependency-path: "**/yarn.lock"
+          always-auth: true
+          registry-url: 'https://npm.pkg.github.com/'
+
+      - name: Publish package
+        run: |
+          cd servers/lib
+          yarn install
+          yarn build
+          yarn publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+
+
+
+       
