--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,8 +31,9 @@ nav:
         - library microservice: admin/servers/lib/LIB-MS.md
       - Services: admin/services.md
       - Guides: 
-        - Add a new user: admin/guides/add_user.md
-        - Add other services: admin/guides/add_service.md
+        - New user: admin/guides/add_user.md
+        - Other services: admin/guides/add_service.md
+        - Link services to local ports: admin/guides/link_service.md
   - User:
       - Motivation: user/motivation.md
       - Features: user/features.md
