--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -8,18 +8,24 @@
   "license": "SEE LICENSE IN <LICENSE.md>",
   "private": false,
   "type": "module",
+  "config": {
+    "NODE_OPTIONS": "--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node"
+  },
   "scripts": {
     "build": "npx tsc",
-    "clean": "script/clean.bash",
+    "clean": "npx rimraf build node_modules coverage dist src.svg test.svg",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
-    "start": "script/start.bash",
+    "start": "npx cross-env NODE_OPTIONS='--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 node dist/src/main.js",
     "syntax": "npx eslint . --fix",
-    "test": "script/test.bash",
-    "test:nocov": "script/test.bash nocoverage",
-    "test:watchAll": "script/test.bash watchAll",
+    "test": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true",
+    "test:nocov": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=false",
+    "test:watchAll": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true --watchAll",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test"
   },
-  "bin": {
+  "script-unused": {
+    "runner": "npx cross-env NODE_OPTIONS='--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 node dist/src/runner.js"
+  },
+"bin": {
     "runner": "./dist/src/main.js"
   },
   "files": [
