--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -8,9 +8,6 @@
   "license": "SEE LICENSE IN <LICENSE.md>",
   "private": false,
   "type": "module",
-  "config": {
-    "NODE_OPTIONS": "--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node"
-  },
   "scripts": {
     "build": "npx tsc",
     "clean": "npx rimraf build node_modules coverage dist src.svg test.svg",
@@ -25,7 +22,7 @@
   "script-unused": {
     "runner": "npx cross-env NODE_OPTIONS='--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 node dist/src/runner.js"
   },
-"bin": {
+  "bin": {
     "runner": "./dist/src/main.js"
   },
   "files": [
@@ -44,6 +41,7 @@
     "@swc/core": "^1.3.94",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.8.7",
     "@types/supertest": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
@@ -67,10 +65,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.2.7",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.7",
     "@nestjs/platform-express": "^10.2.4",
     "cross-env": "^7.0.3",
     "execa": "^8.0.1",
+    "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   }
