--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -73,5 +73,6 @@
     "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
