--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,8 @@ nav:
         - New user: admin/guides/add_user.md
         - Other services: admin/guides/add_service.md
         - Link services to local ports: admin/guides/link_service.md
+        - Make common asset area readonly: admin/guides/common_workspace_readonly.md
+        - Host site without https: admin/guides/hosting_site_without_https.md
   - User:
       - Motivation: user/motivation.md
       - Features: user/features.md
