--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -45,6 +45,7 @@ nav:
           - Mass Spring Damper: user/examples/mass-spring-damper/README.md
           - Water Tank Fault Injection: user/examples/water_tank_FI/README.md
           - Water Tank Model Swap: user/examples/water_tank_swap/README.md
+          - Desktop Robotti and RabbitMQ: user/examples/drobotti-rmqfmu/README.md
           - Codebase: https://github.com/INTO-CPS-Association/DTaaS-examples
   - FAQ: FAQ.md
   - Developer: 
