--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dtaas/runner",
+  "name": "@into-cps-association/runner",
   "version": "0.0.1",
   "description": "DT Runner",
   "main": "dist/src/runner.js",
@@ -9,15 +9,18 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "build": "script/build.bash",
-    "clean": "script/clean.bash",
+    "build": "npx tsc",
+    "clean": "npx rimraf build node_modules coverage dist src.svg test.svg",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
-    "start": "script/start.bash",
-    "syntax": "script/syntax.bash",
-    "test": "script/test.bash",
-    "test:nocov": "script/test.bash nocoverage",
-    "test:watchAll": "script/test.bash watchAll",
-    "graph": "script/graph.bash"
+    "start": "npx cross-env NODE_OPTIONS='--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 node dist/src/main.js",
+    "syntax": "npx eslint . --fix",
+    "test": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true",
+    "test:nocov": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=false",
+    "test:watchAll": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true --watchAll",
+    "graph": "npx madge --image src.svg src && npx madge --image test.svg test"
+  },
+  "script-unused": {
+    "runner": "npx cross-env NODE_OPTIONS='--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 node dist/src/runner.js"
   },
   "bin": {
     "runner": "./dist/src/main.js"
@@ -26,6 +29,9 @@
     "dist/",
     "script/"
   ],
+  "prettier": {
+    "singleQuote": true
+  },
   "devDependencies": {
     "@jest/globals": "^29.6.2",
     "@nestjs/cli": "^10.1.18",
@@ -35,18 +41,19 @@
     "@swc/core": "^1.3.94",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.8.7",
     "@types/supertest": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jest": "^27.3.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
-    "prettier": "^3.0.0",
+    "prettier": "^3.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
@@ -58,10 +65,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.2.7",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.7",
     "@nestjs/platform-express": "^10.2.4",
     "cross-env": "^7.0.3",
     "execa": "^8.0.1",
+    "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   }
