--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -30,6 +30,13 @@ nav:
         - website: admin/client/CLIENT.md
         - library microservice: admin/servers/lib/LIB-MS.md
       - Services: admin/services.md
+      - Guides: 
+        - New user: admin/guides/add_user.md
+        - Other services: admin/guides/add_service.md
+        - Link services to local ports: admin/guides/link_service.md
+        - Make common asset area readonly: admin/guides/common_workspace_readonly.md
+        - Host site without https: admin/guides/hosting_site_without_https.md
+        - Update basepath/route for the application: admin/guides/update_basepath.md
   - User:
       - Motivation: user/motivation.md
       - Features: user/features.md
